The config server balancer stop command does not obey maxTimeMS

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 3.4.10, 3.6.0-rc1
    • Affects Version/s: 3.4.9, 3.5.13
    • Component/s: Sharding
    • None
    • Fully Compatible
    • ALL
    • v3.4
    • Sharding 2017-10-23
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The config server side of the balancerStop command does not obey maxTimeMS and because of this can remain running even though the mongos side has timed out earlier. For longer-running balancer rounds this can lead to many threads getting stuck on the config server.

            Assignee:
            Kaloian Manassiev
            Reporter:
            Kaloian Manassiev
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: